# NBUT_Vision

./: CMakeLists.txt  README.md
DataExchange/: Yolodata.xml
scripts/: detect.py  export.py
scripts/utils/: general.py
src/ArmorCenter/: AngleSolve.cpp  AngleSolve.h  ArmorCenter.cpp
src/KF/: EKF.py  kalman.cpp  kalman.h
src/c++/cppcode/: main.cpp
src/c++/hppcode/: demo_example.hpp
src/data_file/data/: init.xml  swap.xml
src/data_file/logs/: demo_example.ERROR  demo_example.INFO  demo_example.WARNING  error_20230310-220143.308032  error_20230311-014112.341330  error_20230311-221726.417351  info_20230310-220143.308032  info_20230311-014112.341330  info_20230311-221726.417351  warning_20230310-220143.308032  warning_20230311-014112.341330  warning_20230311-221726.417351
src/general/: using_glog.hpp  using_python.hpp  using_xml.hpp  using_xml.py
src/general/c++/: using_glog.hpp  using_python.hpp  using_xml.hpp
src/python/: demo_example1.py
